environments/prod/app-1/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-app-1
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-1
#   namespace: ns-app-1
#   labels:
#     app: nginx-1
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nginx-1
#   template:
#     metadata:
#       labels:
#         app: nginx-1
#     spec:
#       containers:
#         - name: nginx
#           image: reddddddddd/magpie-app:2
#           ports:
#             - containerPort: 8001

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-1
  namespace: ns-app-1
  labels:
    app: nginx-1
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx-1
        image: reddddddddd/hfte-app:4
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8001
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: nginx-1
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}


---
kind: Service
apiVersion: v1
metadata:
  name: nginx-1
  namespace: ns-app-1
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8001
  selector:
    app: nginx-1
